# abs_admin

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CH.md  TODO.md  abs_admini.postman_collection.json  application.json5  application.yml  build.rs  database.sql  db_mysql.sql  db_postgres.sql  db_sqlite.sql  driver.rs  driver.txt  postman.json
src/: application.yml  boot.yml  context.rs  dao.rs  error.rs  lib.rs  main.rs
src/bean/: dto.rs  mod.rs
src/config/: app_config.rs  application.rs  boot_config.rs  config.rs  log.rs  log_farmat.rs  mod.rs
src/controller/: file_controller.rs  img_controller.rs  mod.rs  rbac_permission_controller.rs  rbac_role_controller.rs  rbac_user_controller.rs  res.rs  res_controller.rs  role_controller.rs  sys_auth_controller.rs  sys_dict_controller.rs  sys_permission_controller.rs  sys_res_controller.rs  sys_role_controller.rs  sys_user_controller.rs  sys_user_role_controller.rs  user.rs  user_controller.rs  user_role_controller.rs
src/dao/: mod.rs
src/dao/mapper/: mod.rs  sys_dict.rs  sys_res.rs  sys_role.rs  sys_role_res.rs  sys_trash.rs  sys_user.rs  sys_user_role.rs
src/domain/: domain.rs  dto.rs  mod.rs  vo.rs
src/domain/domain/: enums.rs  mod.rs  tables.rs
src/domain/dto/: auth.rs  dict.rs  mod.rs  permission.rs  rbac.rs  res.rs  role.rs  sign_in.rs  sys_dict.rs  sys_user.rs  user.rs
src/domain/mapper/: mod.rs  sys_dict.rs  sys_permission.rs  sys_res.rs  sys_role.rs  sys_role_permission.rs  sys_role_res.rs  sys_trash.rs  sys_user.rs  sys_user_role.rs
src/domain/table/: dict.html  dict.rs  enums.rs  init.rs  mod.rs  rbac.html  rbac.rs  sms.rs  sys_dict.html  sys_dict.rs  sys_trash.html  sys_trash.rs  sys_user.html  sys_user.rs  tables.rs  tables_init.rs
src/domain/vo/: dict.rs  jwt.rs  mod.rs  rbac.rs  res.rs  role.rs  sign_in.rs  sys_dict.rs  sys_user.rs  user.rs
src/dto/: mod.rs
src/middleware/: auth.rs  auth_actix.rs  auth_axum.rs  auth_ntex.rs  mod.rs
src/schedule/: mod.rs  recycle_trash.rs
src/service/: admin_user_service.rs  cache_mem_service.rs  cache_redis_service.rs  cache_service.rs  file_service.rs  file_service_local.rs  file_service_oss.rs  mem_cache_service.rs  mem_service.rs  mod.rs  rbac_permission_service.rs  rbac_role_permission_service.rs  rbac_role_service.rs  rbac_user_role_service.rs  redis_service.rs  res_service.rs  role_service.rs  storage_service.rs  storage_service_local.rs  storage_service_oss.rs  sys_auth_service.rs  sys_config_service.rs  sys_dict_service.rs  sys_permission_service.rs  sys_res_service.rs  sys_role_permission_service.rs  sys_role_res_service.rs  sys_role_service.rs  sys_sms_service.rs  sys_trash_service.rs  sys_user_role_service.rs  sys_user_service.rs
src/service/cache/: cache_mem_service.rs  cache_redis_service.rs  mod.rs
src/service/storage/: mod.rs  storage_local_service.rs  storage_oss_service.rs  storage_service_local.rs  storage_service_oss.rs
src/util/: auth.rs  bencher.rs  client.rs  id.rs  mod.rs  options.rs  password_encoder.rs  string.rs
tests/: file.rs  file_local.rs  file_oss.rs
