[package]
name = "abs_admin"
version = "0.1.0"
authors = ["zhuxiujia <zhuxiujia@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rbs = { version = "4.5" }
rbatis = { version = "4.5", features = [] }
rbdc-sqlite = { version = "4.5" }
#rbdc-mysql = { version = "4.5" }
#rbdc-pg = { version = "4.5" }
#rbdc-mssql = { version = "4.5" }

tokio = { version = "1", features = ["macros"] }
#serde and json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#log
log = "0.4"
#fast_log enable features = ["lz4", "zip", "gzip"], and edit src/config/log.rs fn choose_packer(),edit application.json5 add log_pack_compress: "zip"
fast_log = { version = "1.6", features = ["mmap"] }

axum = {version = "0.7.4",features = ["macros"]}
tower-http = {version = "0.5.2",features = ["fs","cors"]}
#redis
redis = { version = "0.25.2", features = ["tokio-comp"] }
#jwt
jsonwebtoken = "9.2"
md5 = "0.7"
#captcha
captcha = "0.0.9"
#http client,use rust-tls replace to native tls
reqwest = { version = "0.12", features = ["json"] }
#image code
image = "0.25.0"
futures-util = "0.3.21"
parking_lot = "0.12.1"
sqlparser = "0.44.0"
json5 = "0.4"

[build-dependencies]
json5 = "0.4"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1