[package]
name = "abs_admin"
version = "0.1.0"
authors = ["zhuxiujia <zhuxiujia@qq.com>"]
edition = "2024"

[features]
#add this to enable storage_s3 or cache_redis
default = []
#oss/s3
storage_s3 = ["aws-sdk-s3"]
#redis
cache_redis = ["redis"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rbs = { version = "4.6" }
rbatis = { version = "4.6", features = [] }
rbdc-sqlite = { version = "4.6" }
#rbdc-mysql = { version = "4.6" }
#rbdc-pg = { version = "4.6" }
#rbdc-mssql = { version = "4.6" }

tokio = { version = "1", features = ["macros"] }
#serde and json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#log
log = "0.4"
#fast_log enable features = ["lz4", "zip", "gzip"], and edit src/config/log.rs fn choose_packer(),edit application.json5 add log_pack_compress: "zip"
fast_log = { version = "1.7" }

axum = { version = "0.8.7", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["fs","cors","limit"] }
#redis
redis = { version = "1.0.1", features = ["tokio-comp"] ,optional = true}
#jwt
jsonwebtoken = "10.2"
md5 = "0.8"
#captcha
captcha = "1.0.0"
#http client,use rust-tls replace to native tls
reqwest = { version = "0.12", features = ["json"] }
#image code
image = "0.25.9"
futures-util = "0.3.31"
parking_lot = "0.12.5"
sqlparser = "0.60.0"
json5 = "1.3"

aws-sdk-s3 = { version = "1.118.0", features = ["rt-tokio","rustls"], optional = true }
async-trait = "0.1.89"


[build-dependencies]
json5 = "1.3"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.5.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
